2013-05-03  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: copy_area() is optimized.

	* fb/x.h, fb/x_display.c:
	  Double buffering of 1,2 or 4 bpp framebuffer is added.

2013-05-03  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: correct_height() is added to try to correct the height
	  of sixel graphics.

2013-05-02  Araki Ken  <arakiken@users.sf.net>

	* ml_char.c: ml_char_set() allows is_biwidth, is_comb, is_bold and
	  is_underlined to be > 1.
	  (This fixes the bug of use_dynamic_comb option.)

	* ml_logical_visual.c: Minor fixes.

	* fb/x_font.c, fb/x_window.c: x_get_bitmap_line() is added.

	* fb/x_font.h: Added.

2013-05-02  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.[ch], fb/x_window.c:
	  x_display_copy_line() -> x_display_copy_lines()

	* fb/x_display.c, x.h: Display::fp -> Display::fb

2013-05-01  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: If the difference between the specified height and
	  the height of the loaded sixel picture is less than 6, they are
	  regarded as the same ones.

	* fb/x_font.c: "% 8" is replaced by "& 7".

	* fb/x_display.c:
	  - "% ppb" is replaced by "& (ppb - 1)".
	  - Tune up FB_SHIFT.

2013-04-30  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: set_wall_picture() isn't called in window_realized()
	  if the window is unmapped (== not resized to the screen size yet)
	  in framebuffer.

	* fb/x_imagelib.c: load_sixel_1bpp_from_file() is added to tune up
	  loading sixel graphics in 1bpp framebuffer.

	* c_imagelib.c: load_sixel_from_file() returns 1bpp bitmap data if
	  SIXEL_1BPP is defined.

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* im_scim_mod_if.c: Fixed typo.

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c: The value of WSKBD environmental variable is used for
	  the keyboard device.

2013-04-28  Araki Ken  <arakiken@users.sf.net>

	* x_display.c: Tune up drawing the wall picture in put_image_to_124bpp()